--- a/5 Challenges/styles.css
+++ b/5 Challenges/styles.css
@@ -1,6 +1,7 @@
 :root {
   --pageX: 0;
   --pageY: 0;
+  --height: 400px;
 }
 ::-webkit-scrollbar {
    width: 7px;
@@ -77,8 +78,7 @@ html {
   background: url("../content/Earthmap.jpg");
   background-size: cover;
   border-radius: 15px;
-  max-width: 100%;
-  max-height: 100%;
+  height: var(--height);
 }
 .img {
   margin: 0px;
@@ -92,6 +92,7 @@ html {
     margin: 0px;
     padding: 0px;
     border-radius: 15px;
+    height: var(--height);
 }
 
 .World-clock {
