--- a/5 Challenges/styles.css
+++ b/5 Challenges/styles.css
@@ -174,6 +174,10 @@ input {
   position: relative;
   right: 30%;
 }
+.icon-AllWorld {
+  position: relative;
+  bottom: 25px;
+}
 .clock {
   width: 25rem;
   height: 25rem;
@@ -312,11 +316,11 @@ input {
 }
 .temp-info {
   position: relative;
-  left: 10%;
+  left: 5%;
 }
 .tempAllWorld {
   position: relative;
-  top: 50px;
+  top: 30px;
   font-size: 20px;
   font-weight: 600;
 }
@@ -395,4 +399,61 @@ h2 {
   text-align: center;
   margin: 0;
   font-weight: 200;
+}
+
+@media only screen and (max-width: 1500px) {
+
+  .body-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 50px;
+  }
+  .wrapper {
+    display: none;
+  }
+  .list {
+    display: none;
+  }
+  .world-map {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background: url("../content/Earthmap.jpg");
+    background-size: cover;
+    border-radius: 15px;
+    height: var(--height);
+    margin 5%;
+  }
+  .World-clock {
+      grid-column: 3/-1;
+      grid-row: 1/2;
+  }
+
+}
+
+@media only screen and (max-width: 1000px) {
+  .body-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+  .wrapper {
+    display: none;
+  }
+  .list {
+    display: none;
+  }
+  .world-map {
+    grid-row: 1/-1;
+    grid-column: 1/-1;
+  }
+  .World-clock {
+    display: none;
+  }
+  .clock {
+    display: none;
+  }
+ span {
+   font-size: 2em;
+ }
 }
