--- a/5 Challenges/styles.css
+++ b/5 Challenges/styles.css
@@ -324,13 +324,16 @@ input {
   font-size: 20px;
   font-weight: 600;
 }
+.cornerTempF1000 {
+     padding-left: 5px;
+}
 .movingDiv {
   width: auto;
   height: auto;
   display: none;
   position: absolute;
   top: var(--pageY);
-  left:var(--pageX);
+  left: var(--pageX);
   background: rgba(0,0,0,0.2);
   padding: 1px;
   margin: 10px;
